# the-worst

./: .envrc  README.md  main.py  pyproject.toml  requirements.txt
src/: bullet.py  crosshair.py  enemies.py  enemy_manager.py  game.py  hud.py  input_handler.py  menu.py  model.py  player.py  renderer.py  skybox.py  terrain.py  weapon.py
src/assets/shaders/: skybox_fragment.glsl  skybox_vertex.glsl
src/assets/textures/skybox/: load_textures.py
src/utils/: constants.py  math_utils.py
