[tool.poetry]
name = "the-worst"
version = "0.1.0"
description = "The Worst project"
authors = ["Jimmy Flatting <jimmy.flatting@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame-ce = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"